<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/searchUserLabel"
        style="@style/MainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/find_user"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/usernameInputBox"
        style="@style/InputLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchUserLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/input_username"
        android:inputType="text" />

    <Button
        android:id="@+id/done"
        style="@style/ActiveButton"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="30dp"
        android:text="@string/button_search"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        />

</RelativeLayout>